<resources>
    <string name="app_name">PRAK201</string>
    <string name="cost_of_service" />
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="okay_15">Okay (15%)</string>
    <string name="enter_service_cost">Enter Service Cost</string>
    <string name="cost_of_service1">Cost of Service</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_amount">Tip Amount: %1$s</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="calculate">Calculate</string>
</resources>