<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="381dp"
        android:layout_height="50dp"
        android:background="@color/purple_500"
        android:padding="8dp"
        android:text="Tip Time"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/serviceCostEditText"
        android:layout_width="379dp"
        android:layout_height="44dp"
        android:hint="@string/cost_of_service1"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView" />

    <TextView
        android:id="@+id/serviceQualityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="How was the service?"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceCostEditText" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/serviceQualityTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/optionTwenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionEighteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionFifteen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_15"
            android:textSize="18sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/roundUpSwitch"
        android:layout_width="376dp"
        android:layout_height="43dp"
        android:text="Bulatkan Tip"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOptions" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="373dp"
        android:layout_height="40dp"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundUpSwitch" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="353dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:hint="@string/tip_amount"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
